# opencv_learning

./: .gitignore  CMakeLists.txt  rect.cpp  squares.cpp  webcam.cpp  webcam2.cpp
