PROJECT( opencv_apps )
FIND_PACKAGE( OpenCV REQUIRED )
ADD_EXECUTABLE( webcam webcam.cpp )
ADD_EXECUTABLE( webcam2 webcam2.cpp )
ADD_EXECUTABLE( rect rect.cpp )
ADD_EXECUTABLE( sqrt squares.cpp )
TARGET_LINK_LIBRARIES( webcam ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( webcam2 ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( rect ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( sqrt ${OpenCV_LIBS} )
cmake_minimum_required(VERSION 2.8)
